4.4.7 -> 4.4.8:

4.4.6 -> 4.4.7:
	- start 4.4.7 development.
	- use zlib's unrolled crc-32 and adler32, add crc-64, checksums.
	- fix: build error msg had reversed args.
	- add md2, md4, and tiger192 digests.
	- teach --scripts about pre- and post-transaction scriptlets.
	- add /usr/bin/rpmdigest.
	- IPv4/6 and EPSV support by Arkadiusz Miskiewicz <arekm@pld-linux.org>.
	- permit autofetch for virgin sources.
	- add AI_IDN flag to getaddrinfo().
	- fix: lazy mkdir for local _sourcedir.
	- add _patchdir macro similar to _sourcedir.
	- permit autofetch for patches.
	- fetch all (even unused) sources/patches at %prep start.
	- bolt in syck, add to librpmio.
	- absorb lsyck.c (and libsyck.la) into internal lua.
	- use RPMTAG_FILELINKTOS to detect dangling symlinks at run time.
	- fix: free dirnames/linktos dependency sets.
	- consolidate per-mode options into single structure.
	- make dbiTags per-rpmdb rather than global.
	- permit rpmgi to iterate over indices.
	- teach rpmtsSolve() about dirnames/linktos dependencies.
	- add rpmdbBlockDBI() to disable index access.
	- automagically extract scriptlet executable dependencies.
	- fix: don't close stdin exec'ing pgp/gpg, harmless warning (#197602).
	- permit waitpid to be used instead of reaping SIGCHLD (#163151).
	- add tracking dependency for parameterized file digests.
	- fix: hide dbiFoo() internals from C++'s inability to promote void *.
	- fix: default _D_EXACT_NAMLEN(d) to strlen((d)->d_name) on non-linux.
	- debugedit: permit -debuginfo extraction for executables with -O0.
	- remove SELinux context verification (#193488).
	- perl.req: avoid extracting bogus deps in q{} sections (#198033).
	- add macro for the path to the magic file used for classification.
	- handle DT_GNU_HASH dependencies.
	- avoid __typeof__ and __alignof__ usage portably.
	- fix: explicitly terminate readlink(2) return.
	- ppc: bogus unhandled relocations in debugedit.c (#199473).